# foundry-assets

./: README.md  pyproject.toml
foundryassets/: __main__.py
